--- a/contacts.html
+++ b/contacts.html
@@ -9,7 +9,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>ShazStar. | Home.</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="ShazStar's Personal Website. | Home." />
+	<meta name="description" content="ShazStar's Personal Website. | Contacts." />
 	<meta name="keywords" content="ShazStar." />
 	<meta name="author" content="ShazStar." />
 
@@ -76,7 +76,7 @@
 						<nav id="fh5co-menu-wrap" role="navigation">
 							<ul class="sf-menu" id="fh5co-primary-menu">
 								<li class="active">
-								<li><a href="contacts.html">Contacts.</a></li>
+								<li><a href="index.html">Home.</a></li>
 							</ul>
 					  </nav>
 				  </div>
@@ -88,10 +88,10 @@
 
 		<div class="fh5co-hero">
 			<div class="fh5co-overlay"></div>
-			<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/cover_bg_1.jpg);">
+			<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/cover_bg_2.jpg);">
 				<div class="desc animate-box">
-				  <p><span>What's up guys. ShazStar here.<a href="http://frehtml5.co/" target="_blank" class="fh5co-site-name"></a></span></p>
-				  <p><span>Welcome to my personal website.</span></p>
+				  <p><span>Contacts.</span></p>
+				   <p><span>Here's where you can find/contacts me.</span></p>
 				</div>
 			</div>
 
@@ -99,11 +99,11 @@
 		<!-- end:header-top -->					
 
 		<div id="fh5co-feature-product" class="fh5co-section-gray">
-			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center heading-section animate-box">
-						<h3>An introduction.</h3>
-						<p>I'm ShazStar. A 19 y/o dude from Taiwan. Holds huge interest into techs (Both hardware/software.), gaming, making videos, photography and coding.</p>
-						<p></p>
+				        <p>Discord: To be announced. I'm not comfortable let strangers add me.</a></p>
+						<p>Twitter: <a href="https://twitter.com/ShazStar1932">@ShazStar1932.</a> // <a href="https://twitter.com/ShazGaming_">@ShazGaming_.</a></p>
+						<p>YouTube: <a href="https://www.youtube.com/channel/UCuXnIPcmRJ5wPdmS23VdHpw">Main Channel.</a> // <a href="https://www.youtube.com/channel/UCbtNLtLWxYhv01DT5dI83iw">Agar.io.</a></p>
+						<p>Instagram: <a href="https://instagram.com/shazstar1932">@ShazStar1932.</a></p>
 					</div>
 					<div class="col-md-12 text-center">
 					</div>
@@ -117,12 +117,8 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 text-center">
-							<p class="fh5co-social-icons">
-								<a href="https://twitter.com/ShazStar1932"><i class="icon-twitter2"></i></a>
-								<a href="https://instagram.com/shazstar1932"><i class="icon-instagram"></i></a>
-								<a href="https://www.youtube.com/channel/UCuXnIPcmRJ5wPdmS23VdHpw"><i class="icon-youtube"></i></a>
-							</p>
-							<p>Copyright 2020 ShazStar.
+							<p>Copyright 2020 ShazStar.</p>
+							<p>Template from: <a href="http://freehtml5.co/" target="_blank">Freehtml5.co</a> // Template used: Pentagon.</p>
 						</div>
 					</div>
 				</div>
