--- a/contacts.html
+++ b/contacts.html
@@ -100,7 +100,7 @@
 
 		<div id="fh5co-feature-product" class="fh5co-section-gray">
 				<div class="col-md-6 col-md-offset-3 text-center heading-section animate-box">
-				        <p>Discord: To be announced. I'm not comfortable let strangers add me.</a></p>
+				        <p>Discord: To be announced. I'm not comfortable to let strangers add my Discord.</a></p>
 						<p>Twitter: <a href="https://twitter.com/ShazStar1932">@ShazStar1932.</a> // <a href="https://twitter.com/ShazGaming_">@ShazGaming_.</a></p>
 						<p>YouTube: <a href="https://www.youtube.com/channel/UCuXnIPcmRJ5wPdmS23VdHpw">Main Channel.</a> // <a href="https://www.youtube.com/channel/UCbtNLtLWxYhv01DT5dI83iw">Agar.io.</a></p>
 						<p>Instagram: <a href="https://instagram.com/shazstar1932">@ShazStar1932.</a></p>
