Blog link update.

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 	<meta name="keywords" content="ShazStar." />
 	<meta name="author" content="ShazStar." />
 
-  <!-- 
+  <!--
 	//////////////////////////////////////////////////////
 
-	FREE HTML5 TEMPLATE 
+	FREE HTML5 TEMPLATE
 	DESIGNED & DEVELOPED by FREEHTML5.CO
-		
+
 	Website: 		http://freehtml5.co/
 	Email: 			info@freehtml5.co
 	Twitter: 		http://twitter.com/fh5co
@@ -42,7 +42,7 @@
 	<link rel="shortcut icon" href="favicon.ico">
 
 	<!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'> -->
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -76,15 +76,16 @@
 						<nav id="fh5co-menu-wrap" role="navigation">
 							<ul class="sf-menu" id="fh5co-primary-menu">
 								<li class="active">
+								<li><a href="https://shazstar.github.io/blog">Blog.</a></li>
 								<li><a href="contacts.html">Contacts.</a></li>
 							</ul>
 					  </nav>
 				  </div>
 				</div>
 			</header>
-			
+
 		</div>
-		
+
 
 		<div class="fh5co-hero">
 			<div class="fh5co-overlay"></div>
@@ -96,7 +97,7 @@
 			</div>
 
 		</div>
-		<!-- end:header-top -->					
+		<!-- end:header-top -->
 
 		<div id="fh5co-feature-product" class="fh5co-section-gray">
 			<div class="row">
@@ -128,7 +129,7 @@
 				</div>
 			</div>
 		</footer>
-	
+
 
 	</div>
 	<!-- END fh5co-page -->
@@ -157,4 +158,3 @@
 
 	</body>
 </html>
-
