--- a/contacts.html
+++ b/contacts.html
@@ -13,12 +13,12 @@
 	<meta name="keywords" content="ShazStar." />
 	<meta name="author" content="ShazStar." />
 
-  <!-- 
+  <!--
 	//////////////////////////////////////////////////////
 
-	FREE HTML5 TEMPLATE 
+	FREE HTML5 TEMPLATE
 	DESIGNED & DEVELOPED by FREEHTML5.CO
-		
+
 	Website: 		http://freehtml5.co/
 	Email: 			info@freehtml5.co
 	Twitter: 		http://twitter.com/fh5co
@@ -42,7 +42,7 @@
 	<link rel="shortcut icon" href="favicon.ico">
 
 	<!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'> -->
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -77,14 +77,15 @@
 							<ul class="sf-menu" id="fh5co-primary-menu">
 								<li class="active">
 								<li><a href="index.html">Home.</a></li>
+								<li><a href="https://shazstar.github.io/blog">Blog.</a></li>
 							</ul>
 					  </nav>
 				  </div>
 				</div>
 			</header>
-			
+
 		</div>
-		
+
 
 		<div class="fh5co-hero">
 			<div class="fh5co-overlay"></div>
@@ -96,7 +97,7 @@
 			</div>
 
 		</div>
-		<!-- end:header-top -->					
+		<!-- end:header-top -->
 
 		<div id="fh5co-feature-product" class="fh5co-section-gray">
 				<div class="col-md-6 col-md-offset-3 text-center heading-section animate-box">
@@ -124,7 +125,7 @@
 				</div>
 			</div>
 		</footer>
-	
+
 
 	</div>
 	<!-- END fh5co-page -->
@@ -153,4 +154,3 @@
 
 	</body>
 </html>
-
