--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center heading-section animate-box">
 						<h3>An introduction.</h3>
-						<p>I'm ShazStar. A 19 y/o dude from Taiwan. Holds huge interest into techs (Both hardware/software.), gaming, making videos, photography and coding.</p>
+						<p>I'm ShazStar. A 19 y/o dude from Taiwan. Hold huge interest into all sort of technology stuffs, gaming, photography, making videos and coding.</p>
 						<p></p>
 					</div>
 					<div class="col-md-12 text-center">
