--- a/contacts.html
+++ b/contacts.html
@@ -101,7 +101,7 @@
 
 		<div id="fh5co-feature-product" class="fh5co-section-gray">
 				<div class="col-md-6 col-md-offset-3 text-center heading-section animate-box">
-				        <p>Discord: <a href="https://discord.gg/2KD8NEU5cX">The Midnight Club Discord Server.</a></p>
+				        <p>Discord: To be announced. Currently no plan of making server+Not comfortable to let stranger add my Discord.</p>
 						<p>Twitter: <a href="https://twitter.com/ShazStar1932">@ShazStar1932.</a> // <a href="https://twitter.com/TPG_Shaz">@TPG_Shaz.</a></p>
 						<p>YouTube: <a href="https://www.youtube.com/channel/UCuXnIPcmRJ5wPdmS23VdHpw">Main.</a> // <a href="https://www.youtube.com/channel/UCbtNLtLWxYhv01DT5dI83iw">Agar.io.</a></p>
 						<p>Instagram: <a href="https://instagram.com/shazstar1932">@ShazStar1932.</a></p>
