--- a/contacts.html
+++ b/contacts.html
@@ -7,9 +7,9 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>ShazStar. | Contacts.</title>
+	<title>ShazStar. // Contacts.</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="ShazStar's Personal Website. | Contacts." />
+	<meta name="description" content="ShazStar's Personal Website. // Contacts." />
 	<meta name="keywords" content="ShazStar." />
 	<meta name="author" content="ShazStar." />
 
@@ -101,7 +101,8 @@
 
 		<div id="fh5co-feature-product" class="fh5co-section-gray">
 				<div class="col-md-6 col-md-offset-3 text-center heading-section animate-box">
-				        <p>Discord: To be announced. Currently no plan of making server+Not comfortable to let stranger add my Discord.</p>
+				        <p>Discord: TBA. No plan of making server. // Not comfortable to let stranger Add my Discord.</p>
+				        <p>Telegram: Same reason as Discord, Not comfortable either.</p>
 						<p>Twitter: <a href="https://twitter.com/ShazStar1932">@ShazStar1932.</a> // <a href="https://twitter.com/TPG_Shaz">@TPG_Shaz.</a></p>
 						<p>YouTube: <a href="https://www.youtube.com/channel/UCuXnIPcmRJ5wPdmS23VdHpw">Main.</a> // <a href="https://www.youtube.com/channel/UCbtNLtLWxYhv01DT5dI83iw">Agar.io.</a></p>
 						<p>Instagram: <a href="https://instagram.com/shazstar1932">@ShazStar1932.</a></p>
