--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>ShazStar. | Home.</title>
+	<title>ShazStar. // Home.</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="ShazStar's Personal Website. | Home." />
+	<meta name="description" content="ShazStar's Personal Website. // Home." />
 	<meta name="keywords" content="ShazStar." />
 	<meta name="author" content="ShazStar." />
 
@@ -102,7 +102,7 @@
 		<div id="fh5co-feature-product" class="fh5co-section-gray">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center heading-section animate-box">
-						<h3>An introduction.</h3>
+						<h3>A simple introduction.</h3>
 						<p>I'm ShazStar. A 19 y/o dude from Taiwan. Hold huge interest into all sort of technology stuffs, gaming, photography, making videos and coding.</p>
 						<p></p>
 					</div>
