--- a/contacts.html
+++ b/contacts.html
@@ -101,11 +101,11 @@
 
 		<div id="fh5co-feature-product" class="fh5co-section-gray">
 				<div class="col-md-6 col-md-offset-3 text-center heading-section animate-box">
-				        <p>Discord: TBA. No plan of making server. // Not comfortable to let stranger add my Discord.</p>
-				        <p>Telegram: Same reason as Discord, Not comfortable either.</p>
-						<p>Twitter: <a href="https://twitter.com/ShazStar1932">@ShazStar1932.</a> // <a href="https://twitter.com/TPG_Shaz">@TPG_Shaz.</a></p>
+				        <p>Discord: Friend request disabled. I don't like having strangers randomly add my Discord.</p>
+				        <p>Telegram: Same reason as Discord. I don't like having strangers randomly send message to me.</p>
+						<p>Twitter: <a href="https://twitter.com/ShazStar1932">@ShazStar1932.</a> // <a href="https://twitter.com/TPG_Shaz">@TPG_Shaz.</a> (Both Deactivated.)</p>
 						<p>YouTube: <a href="https://www.youtube.com/channel/UCuXnIPcmRJ5wPdmS23VdHpw">Main.</a> // <a href="https://www.youtube.com/channel/UCbtNLtLWxYhv01DT5dI83iw">Agar.io.</a></p>
-						<p>Instagram: <a href="https://instagram.com/shazstar1932">@ShazStar1932.</a></p>
+						<p>Instagram: <a href="https://instagram.com/shazstar1932">@ShazStar1932.</a> (Deactivated.)</p>
 					</div>
 					<div class="col-md-12 text-center">
 					</div>
