--- a/contacts.html
+++ b/contacts.html
@@ -103,9 +103,9 @@
 				<div class="col-md-6 col-md-offset-3 text-center heading-section animate-box">
 				        <p>Discord: Friend request disabled. I don't like having strangers randomly add my Discord.</p>
 				        <p>Telegram: Same reason as Discord. I don't like having strangers randomly send message to me.</p>
-						<p>Twitter: <a href="https://twitter.com/ShazStar1932">@ShazStar1932.</a> // <a href="https://twitter.com/TPG_Shaz">@TPG_Shaz.</a> (Both Deactivated.)</p>
+						<p>Twitter: <a href="https://twitter.com/ShazStar1932">@ShazStar1932.</a> // <a href="https://twitter.com/TPG_Shaz">@TPG_Shaz.</a></p>
 						<p>YouTube: <a href="https://www.youtube.com/channel/UCuXnIPcmRJ5wPdmS23VdHpw">Main.</a> // <a href="https://www.youtube.com/channel/UCbtNLtLWxYhv01DT5dI83iw">Agar.io.</a></p>
-						<p>Instagram: <a href="https://instagram.com/shazstar1932">@ShazStar1932.</a> (Deactivated.)</p>
+						<p>Instagram: <a href="https://instagram.com/shazstar1932">@ShazStar1932.</a></p>
 					</div>
 					<div class="col-md-12 text-center">
 					</div>
