Update Index & Contacts.
Age, introduction and Link update.

--- a/contacts.html
+++ b/contacts.html
@@ -106,7 +106,7 @@
 						<p>Twitter: <a href="https://twitter.com/ShazStar1932">@ShazStar1932.</a> // <a href="https://twitter.com/Alter_Shaz">@Alter_Shaz.</a></p>
 						<p>YouTube: <a href="https://www.youtube.com/channel/UCuXnIPcmRJ5wPdmS23VdHpw">Main.</a> // <a href="https://www.youtube.com/channel/UCbtNLtLWxYhv01DT5dI83iw">Agar.io.</a></p>
 						<p>Instagram: <a href="https://instagram.com/shazstar1932">@ShazStar1932.</a></p>
-						<p>Twitch (I don't livestream a lot.): <a href="https://www.twitch.tv/shazstar">ShazStar.</a></p>
+						<p>Twitch (Mostly osu! contents. / I don't livestream a lot.): <a href="https://www.twitch.tv/shazstar">ShazStar.</a></p>
 					</div>
 					<div class="col-md-12 text-center">
 					</div>
