--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center heading-section animate-box">
 						<h3>A simple introduction.</h3>
-						<p>I'm ShazStar. A 19 y/o dude from Taiwan. Hold huge interest into all sort of technology stuffs, gaming, photography, making videos and coding.</p>
+						<p>I'm a 20 y/o guy from Taiwan, primary focus on all sort of technology stuffs, as well as gaming. Sometimes making youtube videos and doing some photography. Right now as a CSIE Student, trying to learn coding. There's not much to see here so perhaps check either my blog or my social media. Thanks for checking in. :)</p>
 						<p></p>
 					</div>
 					<div class="col-md-12 text-center">
@@ -122,6 +122,7 @@
 								<a href="https://twitter.com/ShazStar1932"><i class="icon-twitter2"></i></a>
 								<a href="https://instagram.com/shazstar1932"><i class="icon-instagram"></i></a>
 								<a href="https://www.youtube.com/channel/UCuXnIPcmRJ5wPdmS23VdHpw"><i class="icon-youtube"></i></a>
+								<a href="https://www.twitch.tv/shazstar"><i class="icon-twitch"></i></a>
 							</p>
 							<p>Copyright 2021 ShazStar.
 						</div>
