--- a/contacts.html
+++ b/contacts.html
@@ -104,7 +104,7 @@
 				        <p>Discord: Friend request disabled. I don't like having strangers randomly add my Discord.</p>
 				        <p>Telegram: Same reason as Discord. I don't like having strangers randomly send message to me.</p>
 						<p>Twitter: <a href="https://twitter.com/ShazStar1932">@ShazStar1932.</a> // <a href="https://twitter.com/Alter_Shaz">@Alter_Shaz.</a></p>
-						<p>YouTube: <a href="https://www.youtube.com/channel/UCuXnIPcmRJ5wPdmS23VdHpw">Main.</a> // <a href="https://www.youtube.com/channel/UCbtNLtLWxYhv01DT5dI83iw">Agar.io.</a></p>
+						<p>YouTube: <a href="https://www.youtube.com/channel/UCuXnIPcmRJ5wPdmS23VdHpw">Main.</a> // <a href="https://www.youtube.com/channel/UCbtNLtLWxYhv01DT5dI83iw">Gaming.</a></p>
 						<p>Instagram: <a href="https://instagram.com/shazstar1932">@ShazStar1932.</a></p>
 						<p>Twitch (Mostly osu! contents. / I don't livestream a lot.): <a href="https://www.twitch.tv/shazstar">ShazStar.</a></p>
 					</div>
@@ -120,7 +120,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 text-center">
-							<p>Copyright 2021 ShazStar.</p>
+							<p>Copyright 2022 ShazStar.</p>
 							<p>Template from: <a href="http://freehtml5.co/" target="_blank">Freehtml5.co</a> // Template used: Pentagon.</p>
 						</div>
 					</div>
