--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center heading-section animate-box">
 						<h3>A simple introduction.</h3>
-						<p>I'm a 20 y/o guy from Taiwan, primary focus on all sort of technology stuffs, as well as gaming. Sometimes making youtube videos and doing some photography. Right now as a CSIE Student, trying to learn coding. There's not much to see here so perhaps check either my blog or my social media. Thanks for checking in. :)</p>
+						<p>I'm a 20 y/o guy from Taiwan, primary focus on all sort of technology stuffs, as well as gaming. Sometimes making youtube videos and doing some photography. Right now study as CS Major, trying to learn coding. There's not much to see here so perhaps check either my blog or my social media. Thanks for checking in. :)</p>
 						<p></p>
 					</div>
 					<div class="col-md-12 text-center">
