--- a/contacts.html
+++ b/contacts.html
@@ -101,7 +101,7 @@
 
 		<div id="fh5co-feature-product" class="fh5co-section-gray">
 				<div class="col-md-6 col-md-offset-3 text-center heading-section animate-box">
-				        <p>Discord:  Friend Request Disabled.
+				        <p>Discord:  Friend Request Disabled. // <a href="https://discord.gg/b2m4Sn65k9">Discord Server.</a></p>
 						<p>Twitter: <a href="https://twitter.com/ShazStar1932">@ShazStar1932.</a> // <a href="https://twitter.com/Alter_Shaz">@Alter_Shaz.</a></p>
 						<p>YouTube: <a href="https://www.youtube.com/channel/UCuXnIPcmRJ5wPdmS23VdHpw">Main.</a> // <a href="https://www.youtube.com/channel/UCbtNLtLWxYhv01DT5dI83iw">Gaming.</a></p>
 						<p>Instagram: <a href="https://instagram.com/shazstar1932">@ShazStar1932.</a></p>
