General sites update.
Updating Introduction on main page and adding more links on contacts page. Also changing backgrounds.

--- a/contacts.html
+++ b/contacts.html
@@ -106,6 +106,8 @@
 						<p>YouTube: <a href="https://www.youtube.com/channel/UCuXnIPcmRJ5wPdmS23VdHpw">Main.</a> // <a href="https://www.youtube.com/channel/UCbtNLtLWxYhv01DT5dI83iw">Gaming.</a></p>
 						<p>Instagram: <a href="https://instagram.com/shazstar1932">@ShazStar1932.</a></p>
 						<p>Twitch (Mostly osu! contents. / I don't livestream a lot.): <a href="https://www.twitch.tv/shazstar">ShazStar.</a></p>
+						<p>Mastodon (Rarely Active): <a href="https://ohai.social/@shazstar1932">@ShazStar1932.</a></p>
+						<p>Tumblr (Rarely Active): <a href="https://shazstar.tumblr.com/">@ShazStar.</a></p>
 					</div>
 					<div class="col-md-12 text-center">
 					</div>
@@ -119,7 +121,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 text-center">
-							<p>Copyright 2022 ShazStar.</p>
+							<p>Copyright 2020~2023 ShazStar.</p>
 							<p>Template from: <a href="http://freehtml5.co/" target="_blank">Freehtml5.co</a> // Template used: Pentagon.</p>
 						</div>
 					</div>
