--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center heading-section animate-box">
 						<h3>A simple introduction.</h3>
-						<p>I'm a 21 y/o guy from Taiwan, primary focus on all sort of technology stuffs, as well as gaming. Sometimes making youtube videos and doing some photography. Right now study as CS Major, trying to learn coding. There's not much to see here so perhaps check either my blog or my social media. Thanks for checking in. :)</p>
+						<p>I'm a 21 y/o guy from Taiwan who enjoying tinkering around with technology as well as gaming. Sometimes making youtube videos and doing some photography. Right now majoring Computer Science, attempting to learn coding. This page mainly served as an introduction about myself so there's really not much around here, please check either my blog or other social media if you wished to know more about me. Thanks for checking in. :)</p>
 						<p></p>
 					</div>
 					<div class="col-md-12 text-center">
@@ -124,7 +124,7 @@
 								<a href="https://www.youtube.com/channel/UCuXnIPcmRJ5wPdmS23VdHpw"><i class="icon-youtube"></i></a>
 								<a href="https://www.twitch.tv/shazstar"><i class="icon-twitch"></i></a>
 							</p>
-							<p>Copyright 2022 ShazStar.
+							<p>Copyright 2020~2023 ShazStar.
 						</div>
 					</div>
 				</div>
