--- a/contacts.html
+++ b/contacts.html
@@ -89,7 +89,7 @@
 
 		<div class="fh5co-hero">
 			<div class="fh5co-overlay"></div>
-			<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/cover_bg_2.png);">
+			<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/cover_bg_2.jpg);">
 				<div class="desc animate-box">
 				  <p><span>Contacts.</span></p>
 				   <p><span>Here's where you can find/contacts me.</span></p>
