--- a/contacts.html
+++ b/contacts.html
@@ -102,13 +102,13 @@
 		<div id="fh5co-feature-product" class="fh5co-section-gray">
 				<div class="col-md-6 col-md-offset-3 text-center heading-section animate-box">
 				        <p>Discord:  Friend Request Disabled. // <a href="https://discord.gg/sXArM5RZWp">Discord Server.</a></p>
-						<p>Twitter: <a href="https://twitter.com/ShazStar1932">@ShazStar1932.</a> // <a href="https://twitter.com/Alter_Shaz">@Alter_Shaz.</a></p>
+						<p>Twitter: <a href="https://twitter.com/ShazStar_">@ShazStar_.</a> // <a href="https://twitter.com/ShazStar1932">@ShazStar1932.</a></p>
 						<p>YouTube: <a href="https://www.youtube.com/channel/UCuXnIPcmRJ5wPdmS23VdHpw">Main.</a> // <a href="https://www.youtube.com/channel/UCbtNLtLWxYhv01DT5dI83iw">Gaming.</a></p>
 						<p>Instagram: <a href="https://instagram.com/shazstar1932">@ShazStar1932.</a></p>
-						<p>Twitch (Mostly osu! contents. / I don't livestream a lot.): <a href="https://www.twitch.tv/shazstar">ShazStar.</a></p>
+						<p>Bluesky: <a href="https://bsky.app/profile/shazstar.bsky.social">@ShazStar.</a></p>
 						<p>Mastodon (Rarely Active): <a href="https://mastodon.social/@shazstar">@ShazStar.</a></p>
-						<p>Bluesky (Rarely Active): <a href="https://bsky.app/profile/shazstar.bsky.social">@ShazStar.</a></p>
-						<p>Tumblr (Rarely Active): <a href="https://shazstar.tumblr.com/">@ShazStar.</a></p>
+						<p>Twitch (Inactive): <a href="https://www.twitch.tv/shazstar">ShazStar.</a></p>
+						<p>Tumblr (Inactive): <a href="https://shazstar.tumblr.com/">@ShazStar.</a></p>
 					</div>
 					<div class="col-md-12 text-center">
 					</div>
