--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center heading-section animate-box">
 						<h3>A simple introduction.</h3>
-						<p>I'm a 22 y/o guy from Taiwan who's currently majoring Computer Science, have interest on Technology related stuffs. Likes photography and make videos too. Also a Rhythm Gamer. This page mainly served as an introduction about myself so there's really not much around here, please check either my blog or other social media if you wished to know more about me. Thank you for checking in.</p>
+						<p>I'm a 23 y/o guy from Taiwan who's currently majoring Computer Science, have interest on Technology related stuffs. Likes riding motorcycles, photography and make videos too. Also a Rhythm Gamer. This page mainly served as an introduction about myself so there's really not much around here, please check either my blog or other social media if you wished to know more about me or even interact with me. Thank you for checking in.</p>
 						<p></p>
 					</div>
 					<div class="col-md-12 text-center">
