--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 			<div class="fh5co-overlay"></div>
 			<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/cover_bg_1.jpg);">
 				<div class="desc animate-box">
-				  <p><span>What's up guys. ShazStar here.<a href="http://frehtml5.co/" target="_blank" class="fh5co-site-name"></a></span></p>
-				  <p><span>Welcome to my personal website.</span></p>
+				  <p><span>Tech Enthusiasts x Rhythm Gamer.<a href="http://frehtml5.co/" target="_blank" class="fh5co-site-name"></a></span></p>
+				  <p><span>Welcome to ShazStar's Personal Website.</span></p>
 				</div>
 			</div>
 
@@ -102,16 +102,33 @@
 		<div id="fh5co-feature-product" class="fh5co-section-gray">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center heading-section animate-box">
-						<h3>A simple introduction.</h3>
-						<p>I'm a 23 y/o guy from Taiwan who's currently majoring Computer Science, have interest on Technology related stuffs. Likes riding motorcycles, photography and make videos too. Also a Rhythm Gamer. This page mainly served as an introduction about myself so there's really not much around here, please check either my blog or other social media if you wished to know more about me or even interact with me. Thank you for checking in.</p>
-						<p></p>
+						<h3>About Me</h3>
+						<p>ShazStar is a 23 years old guy from Taiwan who's majoring Computer Science. Loves gaming (Especially Rhythm Games), fiddle with technology, riding motorcycle, photography, coding and make videos.</p>
 					</div>
 					<div class="col-md-12 text-center">
 					</div>
 				</div>
-
-			</div>
-		</div>
+						<div class="container">
+				<div class="row row-bottom-padded-md">
+					<div class="col-md-12 animate-box">
+						<figure>
+							<img src="images/mac_pro_desktop.jpg" alt="Main Desk Setup" class="img-responsive">
+						</figure>
+						<div class="row">
+					<div class="col-md-8 col-md-offset-2 animate-box">
+						<h3>Gears</h3>
+						<p>Desktop PC: Mac Pro 2012 (Intel Xeon X5675 / AMD RX570 4GB / 32GB DDR3-1333 ECC / macOS Monterey + Windows 10) // Custom Built PC (MSI Z170A Tomahawk / Intel Core i7-6700 / GTX 1060 6GB / 32GB DDR4-2666 / Windows 10)</p>
+						<p>Laptop: MacBook Pro 13 Early-2015 (Intel Core i7-5557U / 16GB DDR3-1866 / macOS Monterey) // ThinkPad T440p (Intel Core i7-4702MQ / 16GB DDR3L-1600 / Windows 10 + Arch Linux + macOS Monterey)</p>
+						<p>Mobile: iPhone 14 Pro (Space Black / 128GB / iOS 17.2) // Nothing Phone 2 (Dark Gray / 12+256GB / Android 15) // iPad Pro 11 (Space Gray / 128GB / iPadOS 17.2) // POCO F1 (Steel Blue / 6+128GB / Android 10)</p>
+						<p>Other Stuffs: Apple Watch S5 (44mm Space Gray Aluminum + Deek Navy Sport Band / watchOS 10.2) // AirPods Pro 1st Gen // GoPro Hero 9</p>
+						<p>Vehicles: 2023 SYM JET SR ABS // 2015 Yamaha YZF-R15v2 // 1992 Yamaha SR150</p>
+					</div>
+				   </div>
+			      </div>
+		         </div>
+			    </div>
+			  </div>
+			  
 		<!-- fh5co-blog-section -->
 		<footer>
 			<div id="footer">
@@ -119,12 +136,11 @@
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 text-center">
 							<p class="fh5co-social-icons">
-								<a href="https://twitter.com/ShazStar1932"><i class="icon-twitter2"></i></a>
-								<a href="https://instagram.com/shazstar1932"><i class="icon-instagram"></i></a>
+								<a href="https://twitter.com/ShazStar_"><i class="icon-twitter2"></i></a>
+								<a href="https://instagram.com/shazstar_"><i class="icon-instagram"></i></a>
 								<a href="https://www.youtube.com/channel/UCuXnIPcmRJ5wPdmS23VdHpw"><i class="icon-youtube"></i></a>
-								<a href="https://www.twitch.tv/shazstar"><i class="icon-twitch"></i></a>
 							</p>
-							<p>Copyright 2020-2024 ShazStar.
+							<p>Copyright 2020-2025 ShazStar.
 						</div>
 					</div>
 				</div>
