--- a/contacts.html
+++ b/contacts.html
@@ -77,7 +77,8 @@
 							<ul class="sf-menu" id="fh5co-primary-menu">
 								<li class="active">
 								<li><a href="index.html">Home.</a></li>
-								<li><a href="https://shazstar.github.io/blog">Blog.</a></li>
+								<li><a href="https://shazstar.github.io/blog">ENG Blog.</a></li>
+								<li><a href="https://shazstar.github.io/twblog">中文 Blog.</a></li>
 							</ul>
 					  </nav>
 				  </div>
