--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
 						<nav id="fh5co-menu-wrap" role="navigation">
 							<ul class="sf-menu" id="fh5co-primary-menu">
 								<li class="active">
-								<li><a href="https://shazstar.github.io/blog">Blog.</a></li>
+								<li><a href="https://shazstar.github.io/blog">ENG Blog.</a></li>
+								<li><a href="https://shazstar.github.io/twblog">中文 Blog.</a></li>
 								<li><a href="contacts.html">Contacts.</a></li>
 							</ul>
 					  </nav>
