Copyright Tidy Up.

--- a/contacts.html
+++ b/contacts.html
@@ -129,7 +129,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 text-center">
-							<p>Copyright 2020-2025 ShazStar.</p>
+							<p>Copyright © 2020-2025 ShazStar.</p>
 							<p>Template from: <a href="http://freehtml5.co/" target="_blank">Freehtml5.co</a> // Template used: Pentagon.</p>
 						</div>
 					</div>
