--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 								<a href="https://instagram.com/shazstar_"><i class="icon-instagram"></i></a>
 								<a href="https://www.youtube.com/channel/UCuXnIPcmRJ5wPdmS23VdHpw"><i class="icon-youtube"></i></a>
 							</p>
-							<p>Copyright 2020-2025 ShazStar.
+							<p>Copyright © 2020-2025 ShazStar.</p>
 						</div>
 					</div>
 				</div>
