Index & Contacts Edit
Updating personal info and SNS links.

--- a/contacts.html
+++ b/contacts.html
@@ -109,11 +109,10 @@
 						</figure>
 					</div>
 				</div>
-				        <p>Discord:  Friend Request Disabled. // <a href="https://discord.gg/sXArM5RZWp">Discord Server.</a></p>
 						<p>Twitter: <a href="https://twitter.com/ShazStar_">@ShazStar_.</a> // <a href="https://twitter.com/ShazStar1932">@ShazStar1932.</a></p>
 						<p>YouTube: <a href="https://www.youtube.com/channel/UCuXnIPcmRJ5wPdmS23VdHpw">Main.</a> // <a href="https://www.youtube.com/channel/UCbtNLtLWxYhv01DT5dI83iw">Gaming.</a></p>
-						<p>Instagram: <a href="https://instagram.com/shazstar_">@ShazStar_.</a> // <a href="https://instagram.com/shazstar1932">@ShazStar1932.</a></p>
-						<p>Bluesky (Semi-Active): <a href="https://bsky.app/profile/shazstar.bsky.social">@ShazStar.</a></p>
+						<p>Instagram: <a href="https://instagram.com/shazstar">@ShazStar.</a> // <a href="https://instagram.com/shazstar1932">@ShazStar1932.</a></p>
+						<p>Bluesky (Inactive): <a href="https://bsky.app/profile/shazstar.bsky.social">@ShazStar.</a></p>
 						<p>Mastodon (Inactive): <a href="https://mastodon.social/@shazstar">@ShazStar.</a></p>
 						<p>Twitch (Inactive): <a href="https://www.twitch.tv/shazstar">ShazStar.</a></p>
 						<p>Tumblr (Inactive): <a href="https://shazstar.tumblr.com/">@ShazStar.</a></p>
