--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center heading-section animate-box">
 						<h3>About Me</h3>
-						<p>ShazStar is a 23 years old guy from Taiwan who's majoring Computer Science. Loves gaming (Especially Rhythm Games), fiddle with technology, riding motorcycle, photography, coding and make videos.</p>
+						<p>ShazStar is a 24 years old guy from Taiwan who's majoring Computer Science. Loves gaming (Especially Rhythm Games), fiddle with technology, riding motorcycle, photography, coding and make videos.</p>
 					</div>
 					<div class="col-md-12 text-center">
 					</div>
@@ -119,10 +119,10 @@
 					<div class="col-md-8 col-md-offset-2 animate-box">
 						<h3>Gears</h3>
 						<p>Desktop PC: Mac Pro 2012 (Intel Xeon X5675 / AMD RX570 4GB / 32GB DDR3-1333 ECC / macOS Monterey + Windows 10) // Custom Built PC (MSI Z170A Tomahawk / Intel Core i7-6700 / GTX 1060 6GB / 32GB DDR4-2666 / Windows 10)</p>
-						<p>Laptop: MacBook Pro 13 Early-2015 (Intel Core i7-5557U / 16GB DDR3-1866 / macOS Monterey) // ThinkPad T440p (Intel Core i7-4702MQ / 16GB DDR3L-1600 / Windows 10 + Arch Linux + macOS Monterey)</p>
-						<p>Mobile: iPhone 14 Pro (Space Black / 128GB / iOS 17.2) // Nothing Phone 2 (Dark Gray / 12+256GB / Android 15) // iPad Pro 11 (Space Gray / 128GB / iPadOS 17.2) // POCO F1 (Steel Blue / 6+128GB / Android 10)</p>
-						<p>Other Stuffs: Apple Watch S5 (44mm Space Gray Aluminum + Deek Navy Sport Band / watchOS 10.2) // AirPods Pro 1st Gen // GoPro Hero 9</p>
-						<p>Vehicles: 2023 SYM JET SR ABS // 2015 Yamaha YZF-R15v2 // 1992 Yamaha SR150</p>
+						<p>Laptop: MacBook Pro 13 Early-2015 (Intel Core i7-5557U / 16GB DDR3-1866 / macOS Monterey) // ThinkPad T440p (Intel Core i7-4702MQ / 16GB DDR3L-1600 / Windows 10 + Arch Linux with KDE + macOS Monterey)</p>
+						<p>Mobile: iPhone 14 Pro (Space Black / 128GB / iOS 17.2) // Nothing Phone 2 (Dark Gray / 12+256GB / Android 15) // iPad Pro 11 2nd Gen (Space Gray / 128GB / iPadOS 17.2) // POCO F1 (Steel Blue / 6GB RAM+128GB Storage / Android 10)</p>
+						<p>Other Stuffs: Apple Watch S5 (44mm Space Gray Aluminum + Deek Navy Sport Band / watchOS 10.2) // AirPods Pro 1st Gen // Nothing Ear 2 // GoPro HERO 9</p>
+						<p>Vehicles: 2023 SYM JET SR ABS // 2015 Yamaha YZF-R15v2</p>
 					</div>
 				   </div>
 			      </div>
@@ -138,7 +138,7 @@
 						<div class="col-md-6 col-md-offset-3 text-center">
 							<p class="fh5co-social-icons">
 								<a href="https://twitter.com/ShazStar_"><i class="icon-twitter2"></i></a>
-								<a href="https://instagram.com/shazstar_"><i class="icon-instagram"></i></a>
+								<a href="https://instagram.com/shazstar"><i class="icon-instagram"></i></a>
 								<a href="https://www.youtube.com/channel/UCuXnIPcmRJ5wPdmS23VdHpw"><i class="icon-youtube"></i></a>
 							</p>
 							<p>Copyright © 2020-2025 ShazStar.</p>
