--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 						<h3>Gears</h3>
 						<p>Desktop PC: Mac Pro 2012 (Intel Xeon X5675 / AMD RX570 4GB / 32GB DDR3-1333 ECC / macOS Monterey + Windows 10) // Custom Built PC (MSI Z170A Tomahawk / Intel Core i7-6700 / GTX 1060 6GB / 32GB DDR4-2666 / Windows 10)</p>
 						<p>Laptop: MacBook Pro 13 Early-2015 (Intel Core i7-5557U / 16GB DDR3-1866 / macOS Monterey) // ThinkPad T440p (Intel Core i7-4702MQ / 16GB DDR3L-1600 / Windows 10 + Arch Linux with KDE + macOS Monterey)</p>
-						<p>Mobile: iPhone 14 Pro (Space Black / 128GB / iOS 17.2) // Nothing Phone 2 (Dark Gray / 12+256GB / Android 15) // iPad Pro 11 2nd Gen (Space Gray / 128GB / iPadOS 17.2) // POCO F1 (Steel Blue / 6GB RAM+128GB Storage / Android 10)</p>
+						<p>Mobile: iPhone 14 Pro (Space Black / 128GB / iOS 17.2) // Nothing Phone 2 (Dark Gray / 12GB RAM+256GB Storage / Android 16) // iPad Pro 11 2nd Gen (Space Gray / 128GB / iPadOS 17.2) // POCO F1 (Steel Blue / 6GB RAM+128GB Storage / Android 10)</p>
 						<p>Other Stuffs: Apple Watch S5 (44mm Space Gray Aluminum + Deek Navy Sport Band / watchOS 10.2) // AirPods Pro 1st Gen // Nothing Ear 2 // GoPro HERO 9</p>
 						<p>Vehicles: 2023 SYM JET SR ABS // 2015 Yamaha YZF-R15v2</p>
 					</div>
